<?xml version="1.0"?>
<package format="2">
  <name>pose_dataset_tool</name>
  <version>0.0.0</version>
  <description>The pose_dataset_tool package</description>
  <maintainer email="federico.salvi@live.it">Federico Salvi</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
</package>
